--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
   </head>
   <body>
     <div class="container">
@@ -17,21 +21,21 @@
           <button data-add><i class="bi bi-plus"></i></button>
         </div>
         <div class="tasks">
-            <!-- <div class="task" draggable="true">
+          <!-- <div class="task" draggable="true">
               <div>Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
               <menu>
                 <button data-edit=""><i class="bi bi-pencil-square"></i></button>
                 <button data-delete><i class="bi bi-trash"></i></button>
               </menu>
             </div> -->
-            <!-- <div class="task dragging" draggable="true">
+          <!-- <div class="task dragging" draggable="true">
               <div>Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
               <menu>
                 <button data-edit=""><i class="bi bi-pencil-square"></i></button>
                 <button data-delete><i class="bi bi-trash"></i></button>
               </menu>
             </div> -->
-            <!-- <div class="task" draggable="true">
+          <!-- <div class="task" draggable="true">
               <div>Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
               <menu>
                 <button data-edit=""><i class="bi bi-pencil-square"></i></button>
@@ -39,14 +43,13 @@
               </menu>
             </div> -->
         </div>
-      </div>
-      <div class="column">
-        <div class="column-title">
-          <h3 data-tasks="0">In Progress</h3>
-          <button data-add><i class="bi bi-plus"></i></button>
-        </div>
-        <div class="tasks">
-                      <!-- <div class="task" draggable="true">
+        <div class="column">
+          <div class="column-title">
+            <h3 data-tasks="0">In Progress</h3>
+            <button data-add><i class="bi bi-plus"></i></button>
+          </div>
+          <div class="tasks">
+            <!-- <div class="task" draggable="true">
               <div>Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
               <menu>
                 <button data-edit=""><i class="bi bi-pencil-square"></i></button>
@@ -54,19 +57,19 @@
               </menu>
             </div>
             <div class="task-input" contenteditable="true" data-placeholder="Task name"></div> -->
+          </div>
+        </div>
+        <div class="column">
+          <div class="column-title">
+            <h3 data-tasks="0">Done</h3>
+            <button data-add><i class="bi bi-plus"></i></button>
+          </div>
+          <div class="tasks"></div>
         </div>
       </div>
-      <div class="column">
-        <div class="column-title">
-          <h3 data-tasks="0">Done</h3>
-          <button data-add><i class="bi bi-plus"></i></button>
-        </div>
-        <div class="tasks"></div>
-      </div>
-    </div>
     </div>
     <dialog class="confirm-modal">
-      <form  method="dialog">
+      <form method="dialog">
         <h3>Delete Task</h3>
         <p>You are about to delete the ff. tasks</p>
         <div class="preview"></div>
